fix: header z-index

--- a/src/assets/scss/partials/header.scss
+++ b/src/assets/scss/partials/header.scss
@@ -5,7 +5,7 @@
     left: 0px;
     width: 100vw;
     // margin-bottom: 50px;
-    z-index: 10s;
+    z-index: 10;
     .header__wrapper{ 
         
         max-width: 1200px;
